Início da responsividade na pág de alimentação equilibrada

--- a/FitlyApp/Artigos/alimentacaoEquilibrada.html
+++ b/FitlyApp/Artigos/alimentacaoEquilibrada.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Alimentação Equilibrada</title>
-  <link rel="stylesheet" href="CSS/alimentaçãoEquilibrada.css"/>
   <link rel="stylesheet" href="../base.css">
+  <link rel="stylesheet" href="CSS/alimentaçãoEquilibrada.css"/>
   <script src="https://kit.fontawesome.com/a1f8cb2104.js" crossorigin="anonymous"></script>
 </head>
 
@@ -14,8 +14,8 @@
   <header>
     <div class="logo">
       <a href="/FitlyApp">
-      <h2>Fitly</h2>
-      <img src="..\Imagens\logos\logoFitlySemTexto.png" alt="Logo">
+        <img src="..\Imagens\logos\logoFitlySemTexto.png" alt="Logo">
+        <h2>Fitly</h2>
       </a>
     </div>
     <nav>
@@ -253,7 +253,7 @@
           raiz.style.setProperty('--color-background', '#f7f7f7');
         raiz.style.setProperty('--color-text', 'black');
                 for (const itens of listaNutrientes) {
-          itens.style.backgroundColor = "pink"
+          itens.style.backgroundColor = "white"
         }
 
         luaImg.style.display ="block";
