--- a/FitlyApp/Artigos/OrganizaçãoAlimentar.html
+++ b/FitlyApp/Artigos/OrganizaçãoAlimentar.html
@@ -8,27 +8,32 @@
         Organização alimentar
     </title>
     <link rel="stylesheet" href="CSS/organização_alimentar.css">
+    <link rel="stylesheet" href="../base.css">
     <script src="https://kit.fontawesome.com/a1f8cb2104.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header>
         <div class="logo">
-            <img src="..\Imagens\logos\logoFitlySemTexto.png" alt="Logo">
             <a href="/FitlyApp">
+                <img src="..\Imagens\logos\logoFitlySemTexto.png" alt="Logo">
                 <h2>Fitly</h2>
             </a>
         </div>
         <nav>
+             <button id="btn">
+        <span class="fa-solid fa-moon" id="lua"></span>
+        <span class="fa-solid fa-sun" id="sol"></span>
+            </button>
             <ul>
                 <li>
-                    <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
+                    <a href="/FitlyApp/">Início</a>
                 </li>
                 <li>
                     <a href="/FitlyApp/Sobre-o-projeto/">Sobre O Projeto</a>
                 </li>
                 <li>
-                    <a href="/FitlyApp/">Início</a>
+                    <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
                 </li>
             </ul>
         </nav>
@@ -180,71 +185,96 @@
                 </li>
             </ul>
         </section>
-    <footer>
-        <div>
-            <div class="logo">
-                <a href="/FitlyApp/">
-                    <img src="/Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background">
-                    <h2>
-                        Fitly
-                    </h2>
-                </a>
-                <p>
-                    Sua jornada para uma vida mais tranquila <br> começa aqui.<br> Encontre treinos, dicas e muito mais!
-                </p>
-                <ul>
-                    <li>
-                        <a href="https://instagram.com/app.fitly"><span class="fa-brands fa-instagram"><span><a>
-                    </li>
-                    <li>
-                        <a arget="_blank" href="https://tiktok.com/@app.fitly"><span class="fa-brands fa-tiktok"></span></a>
-                    </li>
-                    <li>
-                      <a target="_blank" href="https://x.com/app_fitly"><span class="fa-brands fa-twitter"></span></a>
-                    </li>
-                </ul>
-            </div>
-            <div class="mapSite">
-                <h2>
-                    Indice
-                </h2>
-                <ul>
-                    <li>
-                        <a href="/FitlyApp/">Início</a>
-                    </li>
-                    <li>
-                        <a href="/FitlyApp/Sobre-o-projeto/">
-                            Nosso projeto
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/FitlyApp/Artigos/">Artigos</a>
-                    </li>
-                    <li>
-                        <a href="/FitlyApp/Referencias/">Referências</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="contact">
-                <h2> Contato</h2>
-                <p>
-                    Tem alguma dúvida? Nos contate!
-                </p>
-                <p class="email">
-                    Fitlyapp1@gmail.com
-                </p>
-                <p>
-                    Endereço: Bairro Colégio Agrícola, BR-228, Araquari, no Instituto Federal Catarinense
-                </p>
-            </div>
-        </div>
-        <div class="direitos">
-        <p>
-            &copy; 2025 Fitly. Todos os direitos reservados.
-        </p>
-        </div>
-    </footer>
     </main>
+        <footer>
+    <div>
+      <div class="logo">
+        <a href="/FitlyApp/">
+          <img src="../Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background">
+          <h2>
+            Fitly
+          </h2>
+        </a>
+        <p>
+          Sua jornada para uma vida mais tranquila <br> começa aqui.<br> Encontre treinos, dicas e muito mais!
+        </p>
+        <ul>
+          <li>
+            <a href="https://instagram.com/app.fitly"><span class="fa-brands fa-instagram"><span><a>
+          </li>
+          <li>
+            <a arget="_blank" href="https://tiktok.com/@app.fitly"><span class="fa-brands fa-tiktok"></span></a>
+          </li>
+          <li>
+            <a target="_blank" href="https://x.com/app_fitly"><span class="fa-brands fa-twitter"></span></a>
+          </li>
+        </ul>
+      </div>
+      <div class="mapSite">
+        <h2>
+          Indice
+        </h2>
+        <ul>
+          <li>
+            <a href="/FitlyApp/">Início</a>
+          </li>
+          <li>
+            <a href="/FitlyApp/Sobre-o-projeto/">
+              Nosso projeto
+            </a>
+          </li>
+          <li>
+            <a href="/FitlyApp/Artigos/">Artigos</a>
+          </li>
+          <li>
+            <a href="/FitlyApp/Referencias/">Referências</a>
+          </li>
+        </ul>
+      </div>
+      <div class="contact">
+        <h2> Contato</h2>
+        <p>
+          Tem alguma dúvida? Nos contate!
+        </p>
+        <p class="email">
+          Fitlyapp1@gmail.com
+        </p>
+        <p>
+          Endereço: Bairro Colégio Agrícola, BR-228, Araquari, no Instituto Federal Catarinense
+        </p>
+      </div>
+    </div>
+    <div class="direitos">
+      <p>
+        &copy; 2025 Fitly. Todos os direitos reservados.
+      </p>
+    </div>
+  </footer>
+  
+<script>
+  let eClaro = true;
+  const raiz = document.documentElement;
+  let luaImg = document.getElementById('lua');
+  let solImg = document.getElementById("sol");
+  let botaoNoturno = document.getElementById('btn');
+  botaoNoturno.addEventListener("click", function () {
+    if (eClaro) {
+      raiz.style.setProperty('--color-background', '#0a0908');
+      raiz.style.setProperty('--color-text', 'white');
+      luaImg.style.display = "none";
+      solImg.style.display = "block";
+      eClaro = false
+    } else {
+      raiz.style.setProperty('--color-background', '#f7f7f7');
+      raiz.style.setProperty('--color-text', '#333333');
+     
+      luaImg.style.display = "block";
+      solImg.style.display = "none";
+      eClaro = true;
+    }
+  })
+</script>
+
 </body>
 
 </html>
