Formatação organização alimentar

--- a/FitlyApp/Artigos/OrganizaçãoAlimentar.html
+++ b/FitlyApp/Artigos/OrganizaçãoAlimentar.html
@@ -90,7 +90,7 @@
                     Controle de porções sem sofrimento:
                 </h3>
                 <p>
-                    Não precisa pesar cada alimento.Use truques visuais:
+                    Não precisa pesar cada alimento. Use truques visuais:
                 </p>
                 <ul>
                     <li>
@@ -129,7 +129,7 @@
                     <h3>
                         Como adaptar hábitos alimentares à sua rotina
                     </h3>
-                    <p>
+                    <p class="dicas-adaptação">
                         Tem horários malucos? Sem problemas! Pequenas mudanças já ajudam:
                     </p>
                     <ul>
@@ -155,7 +155,7 @@
                     </p>
                 </div>
                 <div>
-                    <img src="/FitlyApp/Imagens/img_Artigos/ferks-guare-kiZKA2rZ8Y0-unsplash 1.png" alt="Marmita_Completa">
+                    <img src="../Imagens/img_Artigos/ferks-guare-kiZKA2rZ8Y0-unsplash 1.png" alt="Marmita_Completa">
                 </div>
             </div>
             <p>
@@ -175,7 +175,7 @@
                 </li>
                 <li>
                     <p>
-                        Ludwig. D (2016). Always Hungry?(Livro traduzido para Emagreça sem fome em português)
+                        Ludwig. D (2016). Always Hungry (Livro traduzido para Emagreça sem fome em português)
                     </p>
                 </li>
                 <li>
