--- a/header.html
+++ b/header.html
@@ -6,6 +6,10 @@
     <title>Header</title>
     <link rel="stylesheet" href="header.css" />
     <script src="header.js" defer></script>
+    <script
+      src="https://kit.fontawesome.com/a1f8cb2104.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header>
