--- a/FitlyApp/Artigos/BeneficiosAlimentacaoEquilibrada.html
+++ b/FitlyApp/Artigos/BeneficiosAlimentacaoEquilibrada.html
@@ -38,12 +38,12 @@
         </p>
         <ul>
             <li>
-                <img src="img beneficios-alimentação-equilibrada/Prato_com_arroz_e_feijão,_frango_grelhado,_batata_frita,_salada_e_ovo_frito_como_adicionais.jpg" alt="#">
+                <img src="../Imagens/img_Artigos/img_beneficios-alimentação-equilibrada/Prato_com_arroz_e_feijão,_frango_grelhado,_batata_frita,_salada_e_ovo_frito_como_adicionais.jpg" alt="#">
                 <div class="texto"><h2>Prato ideal</h2>
                 <p>Um prato saudável deve ser variado e conter carboidratos (arroz, batata), proteínas (frango, feijão) e muitas verduras e legumes. Pequenas quantidades de gorduras boas, como azeite, também são importantes. <br> <a href="https://www.zerocal.com.br/blog/saude-e-bem-estar/alimentacao-equilibrada-qual-a-importancia-beneficios-e-mais " target="_blank"> Leia mais sobre...</a></p></div>
             </li>
             <li>
-                <img src="img beneficios-alimentação-equilibrada/jonathan-borba-lrQPTQs7nQQ-unsplash 1.png" alt="#">
+                <img src="../Imagens/img_Artigos/img_beneficios-alimentação-equilibrada/jonathan-borba-lrQPTQs7nQQ-unsplash 1.png" alt="#">
                 <div class="texto"><h2>Exercícios e Nutrição</h2>
                 <p>Uma alimentação saudável é essencial para quem pratica exercícios. Ela fornece energia, melhora o desempenho e acelera a recuperação muscular, ajudando a prevenir lesões e fortalecer o sistema imunológico. <br> <a href="https://drpauloklein.com.br/blog/a-importancia-da-alimentacao-saudavel-e-atividade-fisica" target="_blank"> Leia mais sobre...</a></p></div>
             </li>
