--- a/FitlyApp/Referencias/index.html
+++ b/FitlyApp/Referencias/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/reset.css"/>
     <link rel="stylesheet" href="css/Referencias.css?v=8"/>
     <script src="https://kit.fontawesome.com/a1f8cb2104.js" crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 
   <body>
@@ -37,7 +38,7 @@
         <ul>
           <li>
             <h2>
-              <img src="/Imagens/img referencia/Vector.png" alt="img">
+              <img src="/FitlyApp/Imagens/img_referencia/Vector.png" alt="img">
               Alimentação equilibrada
             </h2>
             <p>
@@ -50,7 +51,7 @@
           </li>
           <li>
             <h2>
-              <img src="/Imagens/img referencia/Vector (1).png" alt="img">Micro habitos
+              <img src="/FitlyApp/Imagens/img_referencia/Vector_1.png" alt="img">Micro habitos
             </h2>
             <p>
               <span>
@@ -66,7 +67,7 @@
           <ul>
           <li>
             <h2>
-              <img src="/Imagens/img referencia/Vector (2).png" alt="img">Beneficios da alimentação equilibrada
+              <img src="/FitlyApp/Imagens/img_referencia/Vector_2.png" alt="img">Beneficios da alimentação equilibrada
             </h2>
             <p>
               <span>
@@ -84,7 +85,7 @@
           </li>
           <li>
             <h2>
-              <img src="/Imagens/img referencia/Vector (3).png" alt="img">Organização alimentar
+              <img src="/FitlyApp/Imagens/img_referencia/Vector_3.png" alt="img">Organização alimentar
             </h2>
             <p>
               <span>
@@ -110,7 +111,7 @@
         <div>
             <div class="logo">
                 <a href="/FitlyApp/">
-                    <img src="\Imagens\logos\logoFitlySemTexto.png" alt="Fitly_background">
+                    <img src="/FitlyApp/Imagens/img_referencia/Vector_2.png" alt="Fitly_background">
                     <h2>
                         Fitly
                     </h2>
