--- a/FitlyApp/Artigos/MicroHabitos.html
+++ b/FitlyApp/Artigos/MicroHabitos.html
@@ -4,29 +4,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Micro-hábitos transformadores</title>
+    <link rel="stylesheet" href="../base.css">
     <link rel="stylesheet" href="CSS/micro-habitos.css" />
     <script src="https://kit.fontawesome.com/a1f8cb2104.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <header>
-      <div class="logo">
-        <img src="..\Imagens\logos\logoFitlySemTexto.png" alt="Logo">
-        <a href="/FitlyApp"><h2>Fitly</h2></a>
-      </div>
-      <nav>
-        <ul>
-          <li>
-            <a href="/FitlyApp/">Início</a>
-          </li>
-          <li>
-            <a href="/FitlyApp/Sobre-o-projeto/">Sobre O Projeto</a>
-          </li>
-          <li>
-            <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
-          </li>
-        </ul>
-      </nav>
+        <div class="logo">
+            <a href="/FitlyApp">
+                <img src="..\Imagens\logos\logoFitlySemTexto.png" alt="Logo">
+                <h2>Fitly</h2>
+            </a>
+        </div>
+        <nav>
+            </button>
+            <ul>
+                <li>
+                    <a href="/FitlyApp/">Início</a>
+                </li>
+                <li>
+                    <a href="/FitlyApp/Sobre-o-projeto/">Sobre O Projeto</a>
+                </li>
+                <li>
+                    <a class="contato" href="/FitlyApp/Artigos/">Artigos</a>
+                </li>
+            </ul>
+        </nav>
     </header>
+    
+
     <main>
       <section class="introdução">
         <h2>
@@ -103,7 +109,7 @@
         </p>
         </div>
         <div>
-            <img src="../Imagens/img Artigos/Mulher_se_alongando.png" alt="Imagem de uma menina alongando">
+            <img src="../Imagens/img_Artigos/Mulher_se_alongando.png" alt="Imagem de uma menina alongando">
         </div>
       </section>
       <section class="referencia">
@@ -124,7 +130,7 @@
         <div>
             <div class="logo">
                 <a href="/FitlyApp/">
-                    <img src="/Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background">
+                    <img src="../Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background">
                     <h2>
                         Fitly
                     </h2>
