Alteração da localização das imagens das págs do artigo principal, PS: O Matheus colocou no lugar errado, e padronização do footer

--- a/FitlyApp/Artigos/index.html
+++ b/FitlyApp/Artigos/index.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Artigos</title>
-    <link
-      rel="stylesheet"
-      href="/beneficios-alimentacao-equilibrada/css/reset.css"
-    />
+    <link rel="stylesheet" href="../base.css">
     <link rel="stylesheet" href="CSS/artigoPrincipal.css" />
     <script src="https://kit.fontawesome.com/a1f8cb2104.js" crossorigin="anonymous"></script>
   </head>
@@ -15,8 +12,8 @@
   <body>
     <header>
       <div class="logo">
-        <img src="..\Imagens\logos\logoFitlySemTexto.png" alt="Logo" />
         <a href="/FitlyApp">
+          <img src="..\Imagens\logos\logoFitlySemTexto.png" alt="Logo" />
           <h2>Fitly</h2>
         </a>
       </div>
@@ -44,7 +41,7 @@
             <div class="tudo">
               <a href="/FitlyApp/Artigos/AlimentacaoEquilibrada.html"
                 ><img
-                  src="/FitlyApp/Artigos/img_beneficios-maleficios/img alimentação-equilibreda/fresh-fruits-2305192_1280 1.png"
+                  src="../Imagens/img_Artigos/img alimentacao-equilibrada/fresh-fruits-2305192_1280 1.png"
                   alt="img"
               /></a>
               <div class="texto">
@@ -62,7 +59,7 @@
             <div class="tudo">
               <a href="/FitlyApp/Artigos/BeneficiosAlimentacaoEquilibrada.html"
                 ><img
-                  src="/FitlyApp/Artigos/img_beneficios-alimentação-equilibrada/prato-02.png"
+                  src="../Imagens/img_Artigos/img_beneficios-alimentação-equilibrada/prato-02.png"
                   alt="img"
               /></a>
               <div class="texto">
@@ -81,7 +78,7 @@
             <div class="tudo">
               <a href="/FitlyApp/Artigos/MicroHabitos.html"
                 ><img
-                  src="/FitlyApp/Artigos/img_artigoPrincipal/homen-02.png"
+                  src="../Imagens/img_Artigos/img_artigoPrincipal/homen-02.png"
                   alt="img"
               /></a>
               <div class="texto">
@@ -100,7 +97,7 @@
             <div class="tudo">
               <a href="/FitlyApp/Artigos/OrganizaçãoAlimentar.html"
                 ><img
-                  src="/FitlyApp/Artigos/img_artigoPrincipal/ferks-02.png"
+                  src="../Imagens/img_Artigos/ferks-guare-kiZKA2rZ8Y0-unsplash 1.png"
                   alt="img"
               /></a>
               <div class="texto">
@@ -120,7 +117,7 @@
         <div>
             <div class="logo">
                 <a href="/FitlyApp/">
-                    <img src="/Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background">
+                    <img src="../Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background">
                     <h2>
                         Fitly
                     </h2>
