Ajustes Header e Footer

--- a/index.html
+++ b/index.html
@@ -25,25 +25,30 @@
   <body>
     <header>
       <div class="logo">
-        <img src="FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Logo">
+        <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Logo" />
         <a href="/FitlyApp"><h2>Fitly</h2></a>
       </div>
-      <nav>
+      <nav class="nav-menu">
         <ul>
           <li>
-            <a class="contato" href="/Artigos/index.html">Artigos</a>
-          </li>
-          <li>
-            <a href="/FitlyApp/Sobre-o-projeto/index.html">Sobre o projeto</a>
+            <a href="#inicio">Início</a>
           </li>
           <li>
             <a href="#plataforma">Nossa Plataforma</a>
           </li>
           <li>
-            <a href="#inicio">Início</a>
+            <a href="/Sobre-o-projeto/">Sobre o projeto</a>
+          </li>
+          <li>
+            <a class="contato" href="/Artigos/index.html">Artigos</a>
           </li>
         </ul>
       </nav>
+      <div class="hamburger">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
     </header>
     <main>
       <section id="inicio">
@@ -154,5 +159,6 @@
         </p>
         </div>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
