--- a/FitlyApp/Artigos/BeneficiosAlimentacaoEquilibrada.html
+++ b/FitlyApp/Artigos/BeneficiosAlimentacaoEquilibrada.html
@@ -56,12 +56,12 @@
         <p class="meio">O consumo excessivo de produtos industrializados com aditivos químicos, corantes e conservantes pode trazer sérios prejuízos à saúde, aumentando o risco de obesidade, doenças cardiovasculares e diabetes tipo 2.</p>
         <ul>
           <li>
-              <img src="img beneficios-alimentação-equilibrada/logan-weaver-lgnwvr-qgZRZI-pKgM-unsplash.jpg" alt="#">
+              <img src="/FitlyApp/Imagens/img_Artigos/img_beneficios-alimentação-equilibrada/logan-weaver-lgnwvr-qgZRZI-pKgM-unsplash.jpg" alt="#">
               <div class="texto"><h2>Riscos do Fast Food</h2>
               <p>Fast food é um exemplo comum de ultraprocessado, cheio de gorduras ruins, sódio e açúcares. O consumo frequente aumenta o risco de obesidade, diabetes e problemas cardíacos, além de possuir poucos nutrientes. <br> <a href="https://longevidadesaudavel.com.br/perigos-do-fast-foods/" target="_blank"> Leia mais sobre...</a></p></div>
           </li>
           <li>
-            <img src="img beneficios-alimentação-equilibrada/Group 24.png" alt="#">
+            <img src="/FitlyApp/Imagens/img_Artigos/img_beneficios-alimentação-equilibrada/Group 24.png" alt="#">
             <div class="texto"><h2>Atenção aos Rótulos</h2>
             <p>Saber ler os rótulos ajuda a evitar ultraprocessados. Prefira produtos com poucos ingredientes e fique atento a termos como açúcares, gorduras trans, corantes e conservantes. Verifique também o sódio por porção. <br> <a href="https://vencerocancer.org.br/como-ler-o-rotulo-de-um-alimento/" target="_blank"> Leia mais sobre...</a></p></div>
           </li>
