--- a/FitlyApp/index.html
+++ b/FitlyApp/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fitly</title>
-    <link rel="stylesheet" href="style.css?v=1"/>
-    <link rel="stylesheet" href="base.css">
-    <link rel="icon" href="/Imagens/logos/FitlyLogo.png">
+    <link rel="stylesheet" href="style.css?v=1" />
+    <link rel="stylesheet" href="base.css" />
+    <link rel="icon" href="/Imagens/logos/FitlyLogo.png" />
     <script>
       const images = [
-        "Imagens/img pag inicial/ambitious-studio-rick-barrett-03b61PY89hs-unsplash.jpg",
-        "Imagens/img pag inicial/kike-vega-F2qh3yjz6Jk-unsplash.jpg",
-        "Imagens/img pag inicial/sven-mieke-1MrMsNBcsYA-unsplash.jpg",
-        "Imagens/img pag inicial/victor-freitas-WvDYdXDzkhs-unsplash.jpg",
+        "Imagens/img_pag-inicial/ambitious-studio-rick-barrett-03b61PY89hs-unsplash.jpg",
+        "Imagens/img_pag-inicial/kike-vega-F2qh3yjz6Jk-unsplash.jpg",
+        "Imagens/img_pag-inicial/sven-mieke-1MrMsNBcsYA-unsplash.jpg",
+        "Imagens/img_pag-inicial/victor-freitas-WvDYdXDzkhs-unsplash.jpg",
       ];
 
       document.addEventListener("DOMContentLoaded", (_) => {
@@ -20,139 +20,181 @@
         document.getElementById("randImg").src = images[randImageIndex];
       });
     </script>
-    <script src="https://kit.fontawesome.com/a1f8cb2104.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/a1f8cb2104.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header>
-      <div class="logo">
-        <img src="Imagens/logos/logoFitlySemTexto.png" alt="Logo">
+      <h1 class="logo">
+        <img src="/FitlyApp/Imagens/logos/logoFitlySemTexto.png" alt="Logo" />
         <a href="/FitlyApp"><h2>Fitly</h2></a>
-      </div>
-      <nav>
+      </h1>
+      <nav class="nav-menu">
         <ul>
           <li>
-            <a class="contato" href="/Artigos/index.html">Artigos</a>
-          </li>
-          <li>
-            <a href="/Sobre-o-projeto/">Sobre o projeto</a>
+            <a href="#inicio">Início</a>
           </li>
           <li>
             <a href="#plataforma">Nossa Plataforma</a>
           </li>
           <li>
-            <a href="#inicio">Início</a>
+            <a href="/Sobre-o-projeto/">Sobre o projeto</a>
+          </li>
+          <li>
+            <a class="contato" href="/Artigos/index.html">Artigos</a>
           </li>
         </ul>
       </nav>
+      <div class="hamburger">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
     </header>
     <main>
       <section id="inicio">
         <div class="randIMG">
-          <img id="randImg" src="" alt="Fitly Banner"/>
+          <img id="randImg" src="#" alt="Fitly Banner" />
           <div class="inicio">
             <h1>Transforme sua vida com saúde e tecnologia</h1>
-            <p>
-              Controle calorias, treine e alcance seus objetivos.
-            </p>
+            <p>Controle calorias, treine e alcance seus objetivos.</p>
             <a href="/FitlyApp/Formulario/">Comece Agora</a>
           </div>
         </div>
       </section>
-        <section id="plataforma" class="plataforma">
-          <img src="Imagens/mockups/Home-portrait.png" alt="FitlyApp">
-          <h2>Nossa Plataforma</h2>
-          <h4>A Fitly foi desenvolvida para ser a sua parceira na busca por uma vida mais saudável. Combinando <b>tecnologia e bem-estar,</b> nossa plataforma oferece recursos práticos e intuitivos para acompanhar sua rotina, controlar sua alimentação e manter hábitos que fazem diferença.</h2>
-          <h2>O Que Oferecemos</h2>
-            <ul>
-                <li>
-                    <h3><i class="fa-solid fa-bowl-food"></i> Receitas Saudáveis</h3>
-                    <p>Descubra um universo de opções nutritivas e saborosas, pensadas para diferentes estilos de vida. Nossas receitas são práticas, rápidas e acessíveis, ajudando você a manter uma alimentação equilibrada sem abrir mão do prazer de comer bem.</p>
-                </li>
-                <li>
-                    <h3><i class="fa-solid fa-scale-balanced"></i> Contador de Calorias</h3>
-                    <p>Acompanhe sua ingestão de forma simples e inteligente. Registre cada refeição, visualize a distribuição de carboidratos, proteínas e gorduras, e mantenha o controle sobre sua dieta para alcançar seus objetivos com precisão.</p>
-                </li>
-                <li>
-                    <h3><i class="fa-solid fa-bottle-water"></i> Controle de Água e Peso</h3>
-                    <p>Monitore sua hidratação diária e acompanhe a evolução do seu peso com praticidade. Nossa ferramenta permite definir metas e acompanhar seu progresso, incentivando hábitos mais saudáveis no dia a dia.</p>
-                </li>
-                <li>
-                    <h3><i class="fa-solid fa-book"></i> Artigos</h3>
-                    <p>Acesse conteúdos sobre saúde, nutrição, exercícios e bem-estar. Nossos artigos foram pensados para orientar sua jornada de transformação, trazendo dicas valiosas e informações confiáveis para o seu crescimento pessoal.</p>
-                </li>
-            </ul>
-        </section>
-        </section>
-        <section class="CTA">
-          <h2>Sua jornada para o topo começa <br> com o primeiro passo.</h2>
-          <a href="/Formulario/">Comece Agora</a>
-          <img src="Imagens/img pag inicial/geike-verniers-UXVH8QPBlIQ-unsplash.jpg" alt="">
-        </section>
+      <section id="plataforma" class="plataforma">
+        <img src="Imagens/mockups/Home-portrait.png" alt="FitlyApp" />
+        <h2>Nossa Plataforma</h2>
+        <h4>
+          A Fitly foi desenvolvida para ser a sua parceira na busca por uma vida
+          mais saudável. Combinando <b>tecnologia e bem-estar,</b> nossa
+          plataforma oferece recursos práticos e intuitivos para acompanhar sua
+          rotina, controlar sua alimentação e manter hábitos que fazem
+          diferença.
+        </h4>
+        <h2>O Que Oferecemos</h2>
+        <ul>
+          <li>
+            <h3><i class="fa-solid fa-bowl-food"></i> Receitas Saudáveis</h3>
+            <p>
+              Descubra um universo de opções nutritivas e saborosas, pensadas
+              para diferentes estilos de vida. Nossas receitas são práticas,
+              rápidas e acessíveis, ajudando você a manter uma alimentação
+              equilibrada sem abrir mão do prazer de comer bem.
+            </p>
+          </li>
+          <li>
+            <h3>
+              <i class="fa-solid fa-scale-balanced"></i> Contador de Calorias
+            </h3>
+            <p>
+              Acompanhe sua ingestão de forma simples e inteligente. Registre
+              cada refeição, visualize a distribuição de carboidratos, proteínas
+              e gorduras, e mantenha o controle sobre sua dieta para alcançar
+              seus objetivos com precisão.
+            </p>
+          </li>
+          <li>
+            <h3>
+              <i class="fa-solid fa-bottle-water"></i> Controle de Água e Peso
+            </h3>
+            <p>
+              Monitore sua hidratação diária e acompanhe a evolução do seu peso
+              com praticidade. Nossa ferramenta permite definir metas e
+              acompanhar seu progresso, incentivando hábitos mais saudáveis no
+              dia a dia.
+            </p>
+          </li>
+          <li>
+            <h3><i class="fa-solid fa-book"></i> Artigos</h3>
+            <p>
+              Acesse conteúdos sobre saúde, nutrição, exercícios e bem-estar.
+              Nossos artigos foram pensados para orientar sua jornada de
+              transformação, trazendo dicas valiosas e informações confiáveis
+              para o seu crescimento pessoal.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section class="CTA">
+        <h2>
+          Sua jornada para o topo começa <br />
+          com o primeiro passo.
+        </h2>
+        <a href="/Formulario/">Comece Agora</a>
+        <img
+          src="/FitlyApp/Imagens/img_pag-inicial/geike-verniers-UXVH8QPBlIQ-unsplash.jpg"
+          alt="Imagem CTA"
+        />
+      </section>
     </main>
-    
+
     <footer>
-        <div>
-            <div class="logo">
-                <a href="/FitlyApp/">
-                    <img src="Imagens/logos/logoFitlySemTexto.png" alt="Fitly_background">
-                    <h2>
-                        Fitly
-                    </h2>
-                </a>
-                <p>
-                    Sua jornada para uma vida mais tranquila <br> começa aqui.<br> Encontre treinos, dicas e muito mais!
-                </p>
-                <ul>
-                    <li>
-                        <a href="https://instagram.com/app.fitly"><span class="fa-brands fa-instagram"><span><a>
-                    </li>
-                    <li>
-                        <a arget="_blank" href="https://tiktok.com/@app.fitly"><span class="fa-brands fa-tiktok"></span></a>
-                    </li>
-                    <li>
-                      <a target="_blank" href="https://x.com/app_fitly"><span class="fa-brands fa-twitter"></span></a>
-                    </li>
-                </ul>
-            </div>
-            <div class="mapSite">
-                <h2>
-                    Indice
-                </h2>
-                <ul>
-                    <li>
-                        <a href="/FitlyApp/">Início</a>
-                    </li>
-                    <li>
-                        <a href="/FitlyApp/Sobre-o-projeto/">
-                            Nosso projeto
-                        </a>
-                    </li>
-                    <li>
-                        <a href="/FitlyApp/Artigos/">Artigos</a>
-                    </li>
-                    <li>
-                        <a href="/FitlyApp/Referencias/">Referências</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="contact">
-                <h2> Contato</h2>
-                <p>
-                    Tem alguma dúvida? Nos contate!
-                </p>
-                <p class="email">
-                    Fitlyapp1@gmail.com
-                </p>
-                <p>
-                    Endereço: Bairro Colégio Agrícola, BR-228, Araquari, no Instituto Federal Catarinense
-                </p>
-            </div>
+      <div>
+        <div class="logo">
+          <a href="/FitlyApp/">
+            <img
+              src="Imagens/logos/logoFitlySemTexto.png"
+              alt="Fitly_background"
+            />
+            <h2>Fitly</h2>
+          </a>
+          <p>
+            Sua jornada para uma vida mais tranquila <br />
+            começa aqui.<br />
+            Encontre treinos, dicas e muito mais!
+          </p>
+          <ul>
+            <li>
+              <a target="_blank" href="https://instagram.com/app.fitly"
+                ><span class="fa-brands fa-instagram"></span
+              ></a>
+            </li>
+            <li>
+              <a target="_blank" href="https://tiktok.com/@app.fitly"
+                ><span class="fa-brands fa-tiktok"></span
+              ></a>
+            </li>
+            <li>
+              <a target="_blank" href="https://x.com/app_fitly"
+                ><span class="fa-brands fa-twitter"></span
+              ></a>
+            </li>
+          </ul>
         </div>
-        <div class="direitos">
-        <p>
-            &copy; 2025 Fitly. Todos os direitos reservados.
-        </p>
+        <div class="mapSite">
+          <h2>Indice</h2>
+          <ul>
+            <li>
+              <a href="/FitlyApp/">Início</a>
+            </li>
+            <li>
+              <a href="/FitlyApp/Sobre-o-projeto/"> Nosso projeto </a>
+            </li>
+            <li>
+              <a href="/FitlyApp/Artigos/">Artigos</a>
+            </li>
+            <li>
+              <a href="/FitlyApp/Referencias/">Referências</a>
+            </li>
+          </ul>
         </div>
+        <div class="contact">
+          <h2>Contato</h2>
+          <p>Tem alguma dúvida? Nos contate!</p>
+          <p class="email">Fitlyapp1@gmail.com</p>
+          <p>
+            Endereço: Bairro Colégio Agrícola, BR-228, Araquari, no Instituto
+            Federal Catarinense
+          </p>
+        </div>
+      </div>
+      <div class="direitos">
+        <p>&copy; 2025 Fitly. Todos os direitos reservados.</p>
+      </div>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
